--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -166,7 +166,7 @@
                   </div>
                 </dt>
                 <dt>
-                  <button mat-button class="add-to-favorite" [ngClass]="{'on':item.isFavorite}"
+                  <button mat-button class="add-to-bookmark" [ngClass]="{'on':item.isFavorite}"
                     (click)="onClickFavorite(item)">
                   </button>
                 </dt>
