--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -573,34 +573,7 @@ form {
               &:nth-child(3) {
                 flex-basis: 8%;
 
-                button.add-to-favorite {
-                  box-shadow: none;
-                  min-width: auto;
-                  padding: 0;
-
-                  &::before {
-                    content: "";
-                    display: inline-block;
-                    width: 18px;
-                    height: 18px;
-                    background: url("../../../assets/img/icon_fav_b.svg");
-                    background-repeat: no-repeat;
-                  }
-
-                  &.on {
-
-                    // background-color: $color-pnk04;
-                    &::before {
-                      background: url("../../../assets/img/icon_fav_b_on.svg");
-                      background-repeat: no-repeat;
-                    }
-                  }
-
-                  ::ng-deep.mat-button-ripple {
-                    width: 0;
-                    height: 0;
-                  }
-                }
+                @include add-to-bookmark()
               }
 
               &:nth-child(4) {
