--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -71,7 +71,7 @@
             <!-- <span *ngIf="!isProd">
               {{item.id}}
             </span> -->
-            <button *ngIf="!myFavorite" mat-button class="add-to-favorite" [ngClass]="{'on':item.isFavorite}"
+            <button *ngIf="!myFavorite" mat-button class="add-to-bookmark" [ngClass]="{'on':item.isFavorite}"
               (click)="onClickFavorite(item)">
             </button>
           </mat-list-item>
