REMOJU-533 プラン詳細のPV数が未設定

--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -70,8 +70,7 @@
         </div>
         <div class='rt'>
           <div class="view">
-            <!-- {{ data.pvQty }}<span>view</span> -->
-            0 <span>View</span>
+            {{ data.pvQty }}<span>View</span>
           </div>
         </div>
       </div>
