--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -642,6 +642,7 @@ div.plandtl {
           content: url("../../../assets/img/icon_point.svg");
           width: 47px;
           height: 17px;
+          vertical-align: 6px;
         }
       }
 
