--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -293,7 +293,7 @@ form {
     align-items: center;
     justify-content: space-between;
     // margin-top: 5px;
-
+    padding: 0 12px;
     button.setting {
 
       &.mat-button {
