--- a/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.scss
+++ b/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.scss
@@ -3,6 +3,7 @@
 ::ng-deep {
   #editplan {
     position: relative;
+    padding-bottom: 60px;
 
     .ng-star-inserted {
       .panel-content {
@@ -19,11 +20,21 @@
 
           &::before {
             content: '';
-            background-image: url('../../../assets/img/icon_bookmark_gld.svg');
+            background-image: url('../../../assets/img/icon_bookmark_d.svg');
             background-repeat: no-repeat;
             width: 17px;
             height: 22px;
             margin-right: 0.5em;
+          }
+
+          &.item {
+            &::before {
+              background-image: url('../../../assets/img/star-rating-off.svg');
+              background-repeat: no-repeat;
+              width: 17px;
+              height: 22px;
+              margin-right: 0;
+            }
           }
         }
 
@@ -213,7 +224,7 @@
         }
       }
 
-      button.absclose{
+      button.absclose {
         all: unset;
         position: absolute;
         top: 0;
@@ -222,7 +233,7 @@
         padding: 3px;
         background-color: #4A4A4A;
         color: #fff;
-        border:none;
+        border: none;
         border-radius: 3px;
         cursor: pointer;
       }
