--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -32,7 +32,7 @@ form {
       font-weight: 700;
       height: 32px;
       width: 68px;
-      background-color: #BCBCBC;
+      background-color: $color_grn01;
       border-radius: 16px;
       color: #fff;
       text-align: center;
@@ -107,6 +107,10 @@ form {
 
       &.color-silver {
         background-color: #cecac7;
+      }
+
+      &.color-green {
+        background-color: $color-grn01;
       }
 
       >img {
