--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -291,7 +291,7 @@
           <p>{{ row.planExplanation }}</p>
         </mat-list-item>
       </mat-list>
-      <div class="timerequired">{{ row.timeRequiredDisp  }}</div>
+      <div class="timerequired"><label>{{'Roundtime'|translate}}</label>{{ row.timeRequiredDisp  }}</div>
     </div>
     <!-- スタート時間-->
     <mat-list style="margin: 30px 16px 16px;">
