--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -910,9 +910,17 @@ form {
       position: absolute;
       right: 12px;
 
+      label{
+        background: #707070;
+        color: #fff;
+        padding: 1px 4px;
+        border-radius: 2px;
+        margin-right: 3px;
+      }
+
       &::before {
         display: inline-block;
-        content: url("../../../assets/img/av-timer.svg");
+        //content: url("../../../assets/img/av-timer.svg");
         width: 16px;
         height: 16px;
         padding-right: 3px;
