--- a/src/app/parts/userprofile-panel/userprofile-panel.component.scss
+++ b/src/app/parts/userprofile-panel/userprofile-panel.component.scss
@@ -85,6 +85,16 @@
       
     }
 
+    .about-label{
+      background-color: #808080;
+      color: #fff;
+      padding: 1px 15px;
+      margin-top: 6px;
+      display: inline-block;
+      border-radius: 12px;
+      font-size: 12px;
+    }
+
     .about{
       font-size: 14px;
       background-color: #F7F5EC;
