--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -709,9 +709,17 @@
             padding-right: 3px;
             padding-left: 2px;
 
+            label{
+              background: #707070;
+              color: #fff;
+              padding: 1px 4px;
+              border-radius: 2px;
+              margin-right: 3px;
+            }
+
             &::before {
               display: inline-block;
-              content: url("../../../../../assets/img/av-timer.svg");
+              //content: url("../../../../../assets/img/av-timer.svg");
               width: 16px;
               height: 16px;
               padding-right: 3px;
