--- a/src/app/parts/myplan-auto-dialog/myplan-auto-dialog.component.html
+++ b/src/app/parts/myplan-auto-dialog/myplan-auto-dialog.component.html
@@ -1,5 +1,6 @@
 <h2 mat-dialog-title>{{ "AutoSearchConfirmTitle" | translate }}</h2>
 <mat-dialog-content>
+  <label>{{'ErrorMsgAuto'|translate}}</label>
   <dl class='route'>
     <div>
       <dt><button mat-raised-button class="ok" (click)="onClickStartEndSelect(true)">{{ "PointOfDeparture" | translate }}</button></dt>
