--- a/src/app/parts/myplan-auto-dialog/myplan-auto-dialog.component.scss
+++ b/src/app/parts/myplan-auto-dialog/myplan-auto-dialog.component.scss
@@ -1,15 +1,19 @@
 @import "vars";
-::ng-deep{
-  #auto{
+
+::ng-deep {
+  #auto {
     border-radius: 10px;
     padding: 30px 26px !important;
     position: relative;
+
     @media screen and (min-width: 1025px) {
       width: 50% !important;
     }
+
     .mat-dialog-title {
       font-size: 16px;
       display: inline-flex;
+
       &::before {
         content: url("../../../assets/img/icon_keiro.svg");
         width: 28px;
@@ -19,17 +23,27 @@
       }
     }
 
-    .mat-dialog-content{
-      dl.route{
-        div{
+    .mat-dialog-content {
+      label {
+        font-size: 12px;
+        background: #d0d0d0;
+        display: block;
+        padding: 8px;
+        border-radius: 8px;
+      }
+
+      dl.route {
+        div {
           display: flex;
           align-items: center;
           margin: 1em 0;
-          dt{
-            button{
+
+          dt {
+            button {
               background-color: $color-gld01;
               color: #fff;
-              &::before{
+
+              &::before {
                 content: url('../../../assets/img/icon_locationwt.svg');
                 width: 9px;
                 height: 11px;
@@ -40,37 +54,37 @@
         }
       }
     }
-  
+
     .mat-dialog-actions {
       // justify-content: space-between;
       justify-content: center;
       margin-top: 30px;
       margin-bottom: -20px;
-  
+
       button {
         //width: 100px;
         min-width: 100px;
         height: 40px;
-  
+
         &.cancel {
           border: 1px solid $color-gry04;
           color: $color-gry04;
           font-size: 15px;
         }
-  
+
         &.ok {
           background-color: $color-gld01;
           color: #fff;
           font-size: 20px;
         }
-  
+
         &.abscancel {
           all: unset;
           position: absolute;
           width: 23px;
           top: 7px;
           right: 7px;
-  
+
           &::before {
             content: url("../../../assets/img/btn_delete.svg");
           }
