--- a/src/app/pages/mypage-planlist/mypage-planlist.component.scss
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.scss
@@ -814,31 +814,6 @@ span.sortlink {
                 .release {
                   width: 80px;
                 }
-
-                .delete {
-                  margin-left: 0.5em;
-
-                  .deletePlan {
-                    //position: absolute;
-                    //z-index: 1;
-                    // top: -13px;
-                    // right: 6px;
-                    background-color: rgba(0, 0, 0, 0.3);
-                    border-radius: 50%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    border: none;
-                    width: 24px;
-                    height: 24px;
-
-                    >i {
-                      color: #fff;
-                      font-size: 15px;
-                    }
-                  }
-
-                }
               }
 
               .share {
@@ -945,6 +920,31 @@ span.sortlink {
             }
           }
         }
+      }
+
+      .delete {
+        margin-left: 0.5em;
+
+        .deletePlan {
+          position: absolute;
+          z-index: 1;
+          top: -11px;
+          right: 2px;
+          background-color: rgba(0, 0, 0, 0.5);
+          border-radius: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border: none;
+          width: 24px;
+          height: 24px;
+
+          >i {
+            color: #fff;
+            font-size: 15px;
+          }
+        }
+
       }
     }
   }
